# snakemake-dart

./: .gitignore  ARCHITECTURE.md  INSTALL.md  LICENSE  README.md
dart/: CHANGELOG.md  README.md  pubspec.yaml
dart/example/: monitor_cli.dart  snakemake_bridge_example.dart
dart/lib/: snakemake_bridge.dart
dart/lib/src/: snakemake_runner.dart  workflow_events.dart  workflow_server.dart  workflow_state.dart
dart/test/: workflow_server_test.dart
python/: CHANGELOG.md  README.md  pyproject.toml
python/src/snakemake_logger_plugin_dart/: __init__.py  events.py  transport.py
python/tests/: test_events.py  test_transport.py
