[project]
name = "snakemake-logger-plugin-dart"
version = "0.1.0"
description = "Snakemake logger plugin that streams workflow events to a Dart desktop app over WebSocket."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "Deriks Karlay Dias Costa", email = "karlaycosta@gmail.com" },
]
requires-python = ">=3.11"
keywords = ["snakemake", "snakemake-plugin", "logger", "websocket", "dart"]
dependencies = [
    "snakemake-interface-logger-plugins>=1.2.0,<3",
    "websockets>=12.0",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/karlaycosta/snakemake-dart"
Repository = "https://github.com/karlaycosta/snakemake-dart"
Issues = "https://github.com/karlaycosta/snakemake-dart/issues"
Documentation = "https://github.com/karlaycosta/snakemake-dart/blob/main/ARCHITECTURE.md"
Changelog = "https://github.com/karlaycosta/snakemake-dart/blob/main/python/CHANGELOG.md"

[project.optional-dependencies]
dev = [
    "pytest>=7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/snakemake_logger_plugin_dart"]
